change github username

--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -2,8 +2,8 @@ github_users:
   - andrew1j
 
 github_repos:
-  - Andrew1J/TypeRacer
+  - andrew-juang/TypeRacer
   - Topographically-Best-Path/TopoTraversal
-  - Andrew1J/DASH
+  - andrew-juang/DASH
   - alvinli04/APCSFinalProject
   # - Lucas-Lee11/P04
