--- a/_config.yml
+++ b/_config.yml
@@ -121,7 +121,7 @@ bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 
 blog_name: Thoughts # blog_name will be displayed in your blog page
 blog_nav_title: blog # your blog must have a title for it to be displayed in the nav bar
-blog_description: I plan on blogging some time in the future... I'm not sure when though!
+blog_description: I plan on blogging some time in the future... I have many neglected thoughts, so I hope that blogging will be an interesting undertaking to solve this issue.
 permalink: /blog/:year/:title/
 
 # Pagination
